--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: default
 
   <div>
     <ul class="tags post-tags cf">
+      <i class="fa fa-tag"></i>
       <li>Tagged:</li>
       {% for tag in page.tags %}
       <li><a href="/search/?tags={{ tag }}">{{ tag | downcase }}</a></li>
