--- a/style.scss
+++ b/style.scss
@@ -278,6 +278,131 @@ nav {
   background-color: $lightGray;
 }
 
+
+/*CSS Sabrosus style pagination*/
+div.pagination {
+  padding:3px;
+  margin:3px;
+  text-align:center;
+}
+
+div.pagination span {
+  padding: 2px 5px 2px 5px;
+  margin-right: 2px;
+
+  text-decoration: none;
+}
+
+div.pagination a {
+  padding: 2px 5px 2px 5px;
+  margin-right: 2px;
+  border: 1px solid #4183C4;
+  border-radius: 3px;
+  text-decoration: none;
+  background-color: #4183C4;
+  color: #FFF;
+}
+
+/*Tag from https://alexpearce.me*/
+.tags {
+  padding: 0;
+  list-style-type: none;
+  font-size: 1em;
+  color: $gray;
+}
+
+.archive_list {
+  padding: 0;
+  list-style-type: none;
+}
+
+/*****************************************************************************/
+/*
+/* TAGS
+/*
+/*****************************************************************************/
+.tags li {
+  float: left;
+  font-size: 13px;
+  font-size: 1rem;
+  line-height: 2.5;
+}
+
+.tags li a {
+  padding: 4px 6px;
+  margin: 2px;
+  background-color: #e6e6e6;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.post-tags {
+  margin: 20px 0 0 0;
+}
+/* normalize.css Clearfix */
+.cf {
+  *zoom: 1
+}
+
+.cf:before, .cf:after {
+  content: "";
+  display: table;
+}
+
+.cf:after {
+  clear: both
+}
+
+.tag-link {
+  display: inline;
+  font-size: 0.8em;
+}
+
+
+
+.tag-box {
+  list-style: none;
+  margin: 0;
+  padding: 4px 0;
+  overflow: hidden;
+  *zoom: 1;
+}
+
+.tag-box:before, .tag-box:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+
+.tag-box:after {
+  clear: both;
+}
+
+.tag-box.inline li {
+  float: left;
+  font-size: 13px;
+  font-size: 0.875rem;
+  line-height: 2.5;
+}
+
+.tag-box a {
+  padding: 4px 6px;
+  margin: 2px;
+  background-color: #e6e6e6;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.tag-box a span {
+  vertical-align: super;
+  font-size: 10px;
+  font-size: 0.625rem;
+}
+
 footer {
   padding: 20px 0;
   text-align: center;
