--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,11 +15,12 @@ layout: default
 
   <div>
     <ul class="tags post-tags cf">
-      <i class="fa fa-tag"></i>
-      <li>Tagged:</li>
-      {% for tag in page.tags %}
-      <li><a href="/search/?tags={{ tag }}">{{ tag | downcase }}</a></li>
-      {% endfor %}
+      <i class="fa fa-tag">
+        <li>Tagged:</li>
+        {% for tag in page.tags %}
+        <li><a href="/search/?tags={{ tag }}">{{ tag | downcase }}</a></li>
+        {% endfor %}
+      </i>
     </ul>
   </div>
 
