[post] jekyll installation
on mac

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,14 +14,12 @@ layout: default
   </div>
 
   <div>
-    <i class="fa fa-tag">
-      <ul class="tags post-tags cf">
-        <li>Tagged:</li>
-        {% for tag in page.tags %}
-        <li><a href="/search/?tags={{ tag }}">{{ tag | downcase }}</a></li>
-        {% endfor %}
-      </ul>
-    </i>
+    <ul class="tags post-tags cf">
+      <li><i class="fa fa-tag"></i>Tagged:</li>
+      {% for tag in page.tags %}
+      <li><a href="/search/?tags={{ tag }}">{{ tag | downcase }}</a></li>
+      {% endfor %}
+    </ul>
   </div>
 
   {% include disqus.html %}
