--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,3 +24,7 @@ layout: default
 
   {% include disqus.html %}
 </article>
+
+<script defer src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<!-- tag, category search -->
+<script defer src="/js/alexpearce.js"></script>
