--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
+          Copyright © 20014-2015 All rights reserved.
+          <br><br>
           {% include svg-icons.html %}
         </footer>
       </div>
