--- a/style.scss
+++ b/style.scss
@@ -202,7 +202,7 @@ table {
   @include mobile {
     float: none;
     display: block;
-    margin: 0 auto;
+    //margin: 15px;//0 auto;
   }
 
   img {
