--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,8 @@
           </div>
 
           <nav>
-            <a href="http://www.tigiminsight.com">www</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="https://www.tigiminsight.com">Blog</a>
             <a href="{{ site.baseurl }}/tags">Tags</a>
           </nav>
         </header>
