--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="https://www.tigiminsight.com">Blog</a>
+            <!-- <a href="https://www.tigiminsight.com">Blog</a> -->
             <a href="{{ site.baseurl }}/tags">Tags</a>
           </nav>
         </header>
