--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -14,7 +14,7 @@
     <div class="site-nav-right">
         <div class="social-links">
             {% if site.facebook %}
-                <a class="social-link social-link-fb" href="https://linkedin.com/{{ site.facebook }}" target="_blank" rel="noopener">{% include facebook.html %}</a>
+                <a class="social-link social-link-fb" href="https://linkedin.com/{{ site.linkedin }}" target="_blank" rel="noopener">{% include linkedin.html %}</a>
             {% endif %}
         </div>
         {% if site.subscribers %}
