--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,5 +46,6 @@ into the {body} of the default.hbs template -->
 
 <!-- /post -->
 
-<!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs -->
+<!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs 
 {% include page-scripts.html %}
+-->
