--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,9 @@
     <script type="text/javascript" src="{{ site.baseurl }}assets/js/jquery.fitvids.js"></script>
     <!--
     <script type="text/javascript" src="https://demo.ghost.io/assets/js/jquery.fitvids.js?v=724281a32e"></script>
+    
     -->
+    <script type="text/javascript" src="https://demo.ghost.io/assets/built/casper.js?v=3fc3c18e64"></script>
 
     <!-- highlight.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.10.0/components/prism-abap.min.js"></script>
