--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,7 +20,6 @@ into the {body} of the default.hbs template -->
 <!-- #post -->
 
 <main id="site-main" class="site-main outer" role="main">
-    <!--
     <div class="inner">
 
         <article class="post-full {{ page.subclass }} {% unless page.cover %}no-image{% endunless %}">
@@ -41,11 +40,9 @@ into the {body} of the default.hbs template -->
         </article>
 
     </div>
-    -->
 </main>
 
 <!-- /post -->
 
-<!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs 
+<!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs -->
 {% include page-scripts.html %}
--->
