--- a/_includes/post-card-next.html
+++ b/_includes/post-card-next.html
@@ -1,4 +1,3 @@
-{% assign words_per_minute = site.words_per_minute | default: 200 %}
 
     <article class="post-card {{ page.next.class }}{% unless page.next.cover %} no-image{% endunless %}">
         {% if page.next.cover %}
@@ -22,11 +21,7 @@
                     <h2 class="post-card-title">{{ page.next.title }}</h2>
                 </header>
                 <section class="post-card-excerpt">
-                    {% if post.excerpt %}
-                        <p>{{ post.excerpt | strip_html | truncatewords: 33, "" }}</p>
-                    {% else %}
-                        <p>{{ post.content | strip_html | truncatewords: 33, "" }}</p>
-                    {% endif %}
+                    <p>{{ page.next.content | strip_html | truncatewords: 33, "" }}</p>
                 </section>
             </a>
             <footer class="post-card-meta">
@@ -40,14 +35,6 @@
                         </span>
                     {% endif %}
                 {% endfor %}
-                <span class="reading-time">
-                    {% assign words = post.content | strip_html | number_of_words %}
-                    {% if words <= words_per_minute %}
-                      1 min read
-                    {% else %}
-                      {{ words | divided_by:words_per_minute }} min read
-                    {% endif %}
-                </span>
             </footer>
         </div>
     </article>
