--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,4 @@
 <ul class="nav" role="menu">
-    <li class="nav-home" role="menuitem"><a href="https://qwerty1434.github.io/">Home</a></li>
-    <li class="nav-about" role="menuitem"><a href="https://qwerty1434.github.io/about/">About</a></li>
-
+    <li class="nav-home" role="menuitem"><a href="https://supertigim.github.io/">Home</a></li>
+    <li class="nav-about" role="menuitem"><a href="https://supertigim.github.io/about/">About</a></li>
 </ul>
